--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel = "stylesheet" href = "../style.css"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beautiful Pasta</title>
@@ -8,7 +9,7 @@
 <body>
     <h1>Beautiful looking hoemmade pasta</h1>
     <image src = "../img/pasta.jpg" alt = "picture of our juicy ass pasta">
-    <h3>I can't wait!</h3>
+    <h3 class "first">I can't wait!</h3>
     <p>I think I might <strong>burst</strong> from excitement over this amazing pasta. Ive been looking forward to it for months and now I get to share all of it's beauty with you guys.</p>
     <h3>Ingredients:</h3>
     <ul>
