--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel = "stylesheet" href = "../style.css"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna recipe</title>
@@ -8,7 +9,7 @@
 <body>
   <h1>Wonderful Homemade Lasagna</h1>  
   <image src = "../img/lasagna.jpg" alt = "picture of a beautiful lasagna">
-  <h3>What a Beautiful looking lasagna, lets see how to make it!</h3>
+  <h3 class = "first">What a Beautiful looking lasagna, lets see how to make it!</h3>
   <p>Don't even get me started on how good this is about to be, its simple and only takes a few hours to make as well. As a bonus, this IS actually made out of solid gold.</p>
   <h3>Ingredients:</h3>
   <ul>
