--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel = "stylesheet" href = "../style.css"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -8,7 +9,7 @@
 <body>
     <h1>Busting af!!! Spaghetti</h1>
     <image src = "../img/spaghetti.jpg" alt = "pretty looking spaghetti">
-    <h3>Look at that image... This spaghetti will rock your world.</h3>
+    <h3 class = "first">Look at that image... This spaghetti will rock your world.</h3>
     <p>What more can I even say before we make this spaghetti, I think this stuff <em>will</em> actually change the course of my life going forward.</p>
     <h3>Ingredientes:</h3>
     <ul>
